# jcat

./: LICENSE  README.md  pyproject.toml
examples/: terms.txt
jcat/: __init__.py  cli.py  core.py
model/: README.md  example_ontology.ttl
space/: README.md  app.py  requirements.txt
